// Copyright (c) 2020 Mumba. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

#ifndef MUMBA_HOST_RPC_APPLICATION_HANDLER_H_
#define MUMBA_HOST_RPC_APPLICATION_HANDLER_H_

#include <memory>
#include <string>
#include <vector>
#include "base/macros.h"
#include "base/callback.h"
#include "base/sequenced_task_runner.h"
#include "rpc/grpc.h"
#include "net/base/completion_callback.h"
#include "core/host/rpc/services/mumba_services.h"

namespace host {

class ApplicationInstanceCloseHandler : public MumbaServicesUnaryCallHandler {
public:
  static const char kFullname[];
  
  ApplicationInstanceCloseHandler();
  ~ApplicationInstanceCloseHandler() override;

  const std::string& fullname() const override {
    return fullname_;
  }
  base::StringPiece ns() const override;
  base::StringPiece service_name() const override {
    return service_name_;
  }
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const  override {
    return output_;
  }

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;

private:
  
  void Init();
  void CloseApplicationOnUI(int app_id, base::Callback<void(int)> cb);

  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  std::string output_;
};

class ApplicationInstanceLaunchHandler : public MumbaServicesUnaryCallHandler {
public:
  
  static const char kFullname[];

  ApplicationInstanceLaunchHandler();
  ~ApplicationInstanceLaunchHandler() override;

  const std::string& fullname() const override {
    return fullname_;
  }
  base::StringPiece ns() const override;
  base::StringPiece service_name() const override {
    return service_name_;
  }
  base::StringPiece method_name() const override {
    return method_name_;
  }
  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;

private:
  
  void Init();

  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  std::string output_;
};

class ApplicationInstanceListHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationInstanceListHandler();
  ~ApplicationInstanceListHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationInstanceScheduleHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationInstanceScheduleHandler();
  ~ApplicationInstanceScheduleHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationListHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationListHandler();
  ~ApplicationListHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationManifestHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationManifestHandler();
  ~ApplicationManifestHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationPinHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationPinHandler();
  ~ApplicationPinHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationStartHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationStartHandler();
  ~ApplicationStartHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationStatusHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationStatusHandler();
  ~ApplicationStatusHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationStopHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationStopHandler();
  ~ApplicationStopHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

class ApplicationUnpinHandler : public MumbaServicesUnaryCallHandler {
public:  
  static const char kFullname[];

  ApplicationUnpinHandler();
  ~ApplicationUnpinHandler();

  const std::string& fullname() const override {
    return fullname_;
  }

  base::StringPiece ns() const override;
  
  base::StringPiece service_name() const override {
    return service_name_;
  }
  
  base::StringPiece method_name() const override {
    return method_name_;
  }

  const std::string& output() const override;

  void HandleCall(std::vector<char> data, base::Callback<void(int)> cb) override;
  
private:
  
  void Init();
  
  // TODO: Use just one string for everything and a StringPiece for parts
  std::string fullname_;
  base::StringPiece service_name_;
  base::StringPiece method_name_;
  
};

}

#endif